@@ -1,3 +1,4 @@
+2010-May-18	weaver			Added evr/IOConfigV1 class for describing EVR IO cabling.
 2010-Apr30	weaver  Tag V02-00-00.  Changed XtcMonitorServer and XtcMonitorClient to allow multiple clients to
 					receive events in parallel or serialized (daisy-chained).
 2010-Apr14	weaver			Created app/XtcMonitorServer for use by online and offline shared memory servers.
